--- a/src/main/resources/templates/usersTable.html
+++ b/src/main/resources/templates/usersTable.html
@@ -27,54 +27,52 @@ Author URL: http://w3layouts.com
 <section class="inner-banner py-5">
     <div class="w3l-breadcrumb py-lg-5">
         <div class="container pt-4 pb-sm-4">
-            <h4 class="inner-text-title pt-5">Dashboard</h4>
+            <h4 class="inner-text-title pt-5">Users Table</h4>
             <ul class="breadcrumbs-custom-path">
                 <li><a th:href="@{/home}">Home</a></li>
-                <li class="active"><i class="fas fa-angle-right"></i>Dashboard</li>
+                <li class="active"><i class="fas fa-angle-right"></i>Users</li>
             </ul>
         </div>
     </div>
 </section>
 <!-- //inner banner -->
 
-<!-- welcome block -->
-<section class="w3l-contact py-5" id="contact">
-    <div class="container py-md-5 py-4">
-        <div class="title-main text-center mx-auto mb-md-5 mb-4" style="max-width:500px;">
-            <h3 class="title-style" th:text="${'Welcome - ' + username}"></h3>
-            <p class="" th:text="${'You logged in as - ' + roles}"></p>
-        </div>
+<div class="site-section">
 
-    </div>
-</section>
-<!-- //welcome block -->
-
-<!-- //Display Users-->
-<div class="container py-md-5 py-4">
-    <div class="section__content section__content--p30">
-        <div class="container-fluid">
-            <div class="row m-t-25">
-                <div class="col-sm-6 col-lg-3" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a th:href="@{/usersTable}">
-                    <div class="overview-item overview-item--c3">
-                        <div class="overview__inner">
-                            <div class="overview-box clearfix">
-                                <div class="icon">
-                                    <i class="fas fa-database"></i>
-                                </div>
-                                <div class="text">
-                                    <h2>Users</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </a>
-                </div>
+    <div class="table-responsive-md">
+        <div class="row mb-4">
+            <div class="col-md-7">
+                <h3 class="heading-21921">Users</h3>
             </div>
         </div>
+        <table class="table table-striped table-hover">
+            <thead class="table-dark">
+            <tr>
+                <th scope="col">UserID</th>
+                <th scope="col">Username</th>
+                <th scope="col">Role</th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+            
+            
+            <tbody>
+            <tr th:each="user: ${users}">
+                <td th:text="${user.personID}"></td>
+                <td th:text="${user.name}"></td>
+                <td th:text="${user.role}"></td>
+            </tr>
+            </tbody>
+        
+            
+        </table>
+    </div>
+    <div class="col-md-2 login-center text-start">
+        <a th:href="@{/dashboard}">
+        <button class="btn btn-style btn-style-3 text-left">BACK</button>
+        </a>
     </div>
 </div>
-<!-- //Display Users-->
 
 
 <!-- Js scripts -->
