--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -39,7 +39,7 @@
                         </li>
                     </ul>
                 </div>
-                <!-- toggle switch for light and dark theme -->
+                <!-- toggle switch for light and dark theme 
                 <div class="cont-ser-position">
                     <nav class="navigation">
                         <div class="theme-switch-wrapper">
@@ -53,7 +53,7 @@
                         </div>
                     </nav>
                 </div>
-                <!-- //toggle switch for light and dark theme -->
+                --> 
             </nav>
         </div>
     </header>
