--- a/src/main/resources/templates/favsTable.html
+++ b/src/main/resources/templates/favsTable.html
@@ -42,41 +42,24 @@ Author URL: http://w3layouts.com
     <div class="table-responsive-md">
         <div class="row mb-4">
             <div class="col-md-7">
-                <h3 class="heading-21921">Favorites</h3>
+                <h3 class="heading-21921">Favorite Leagues</h3>
             </div>
         </div>
         <table class="table table-striped table-hover">
             <thead class="table-dark">
             <tr>
-                <th scope="col">Favourite Teams</th>
+                <th scope="col">League</th>
+                <th scope="col">Country</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="team: ${favTeams}">
                 <td th:text="${team.name}"></td>
-            </tr>
-            </tbody>
-
-        <table class="table table-striped table-hover">
-            <thead class="table-dark">
-            <tr>
-                <th scope="col">Favourite Competitions</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="team: ${favTeams}">
-                <td th:text="${team.name}"></td>
+                <td th:text="${team.country}"></td>
             </tr>
             </tbody>
 
 
-            
-
-            
-
-            
-        
-            
         </table>
     </div>
     <div class="col-md-2 login-center text-start">
