--- a/src/main/resources/static/assets/css/style-starter.css
+++ b/src/main/resources/static/assets/css/style-starter.css
@@ -21543,7 +21543,7 @@ table.display td{
   padding: .5em 1em;
 }
 
-table.display th{ background: #a2d2f2 }
+table.display th{ background: #d9d1bf }
 table.display td{ background: #fff; }
 
 table.responsive-table{
