--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,34 +39,31 @@ Author URL: http://w3layouts.com
                        
                                <tr>
                                    <td class="organisationname">England</td>
-                                   <td class="organisationname">Premier League</td>
                                    <td class="actions">
-                                       <a th:href="@{/standings}" class="edit-item" title="Edit">Open</a>
+                                       <a th:href="@{/standings}" class="edit-item" title="Edit">Premier League</a>
                                     </td>
                                     <td class="actions">
-                                       <a th:href="@{/standings}" class="fas fa-star"></a>
+                                       <a th:href="@{/}" class="fas fa-star"></a>
                                    </td>
                                </tr>
                        
                                <tr>
                                    <td class="organisationname">Germany</td>
-                                   <td class="organisationname">Bundesliga</td>
                                    <td class="actions">
-                                        <a th:href="@{/standings}" class="edit-item" title="Edit">Open</a>
+                                        <a th:href="@{/standings}" class="edit-item" title="Edit">Bundesliga</a>
                                     </td>
                                     <td class="actions">
-                                        <a th:href="@{/standings}" class="fas fa-star"></a>
+                                        <a th:href="@{/}" class="fas fa-star"></a>
                                     </td>
                                </tr>
                        
                                <tr>
                                    <td class="organisationname">Portugal</td>
-                                   <td class="organisationname">Primeira Liga</td>
                                    <td class="actions">
-                                        <a href="?" class="edit-item" title="Edit">Open</a>
+                                        <a th:href="@{/standings}" class="edit-item" title="Edit">Primeira Liga</a>
                                     </td>
                                     <td class="actions">
-                                        <a href="?" class="fas fa-star"></a>
+                                        <a th:href="@{/}" class="fas fa-star"></a>
                                     </td>
                                </tr>
 
