--- a/src/main/resources/templates/favsTable.html
+++ b/src/main/resources/templates/favsTable.html
@@ -27,10 +27,10 @@ Author URL: http://w3layouts.com
 <section class="inner-banner py-5">
     <div class="w3l-breadcrumb py-lg-5">
         <div class="container pt-4 pb-sm-4">
-            <h4 class="inner-text-title pt-5">Favourites</h4>
+            <h4 class="inner-text-title pt-5">Favorites</h4>
             <ul class="breadcrumbs-custom-path">
                 <li><a th:href="@{/home}">Home</a></li>
-                <li class="active"><i class="fas fa-angle-right"></i>Favourites</li>
+                <li class="active"><i class="fas fa-angle-right"></i>Favorites</li>
             </ul>
         </div>
     </div>
