--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,12 +31,23 @@ Author URL: http://w3layouts.com
                         <table class="layout display responsive-table">
                            <thead>
                                <tr>
-                                   <th >Country</th>
+                                   <th >Abbreviation</th>
                                    <th colspan="3">League</th>
                                </tr>
                            </thead>
                            <tbody>
+
+                            <tr th:each="leagues: ${leagues}">
+                                <td class="actions">
+                                    <a th:href="@{/standings}" th:text="${leagues.abbr}">
+                                 </td>
+                                <td th:text="${leagues.name}"></td>
+                                <td class="actions">
+                                    <a th:href="@{/}" class="fas fa-star"></a>
+                                </td>
+                            </tr>
                        
+                            <!--
                                <tr>
                                    <td class="organisationname">England</td>
                                    <td class="actions">
@@ -66,6 +77,7 @@ Author URL: http://w3layouts.com
                                         <a th:href="@{/}" class="fas fa-star"></a>
                                     </td>
                                </tr>
+                               -->
 
                            </tbody>
                        </table>
