--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -27,56 +27,30 @@ Author URL: http://w3layouts.com
             <div class="container py-4">
                 <div class="row align-items-center pt-sm-5 pt-4">
                     <div class="page">
-                        <h1>Standings</h1>
-                        <table class="layout display responsive-table">
-                           <thead>
-                               <tr>
-                                   <th >Position</th>
-                                   <th >Club</th>
-                                   <th >Played</th>
-                                   <th >Won</th>
-                                   <th >Drawn</th>
-                                   <th >Lost</th>
-                                   <th ><b>Points</b></th>
-                               </tr>
-                           </thead>
-                           <tbody>
-                       
-                               <tr>
-                                   <td class="organisationnumber">1</td>
-                                   <td class="organisationname"> Porto</td>
-                                   <td class="organisationnumber">30</td>
-                                   <td class="organisationnumber">30</td>
-                                   <td class="organisationnumber">0</td>
-                                   <td class="organisationnumber">0</td>
-                                   <td class="organisationnumber"><b>90</b></td>
-                               </tr>
-                       
-                               <tr>
-                                <td class="organisationnumber">18</td>
-                                <td class="organisationname"> Benfica</td>
-                                <td class="organisationnumber">30</td>
-                                <td class="organisationnumber">0</td>
-                                <td class="organisationnumber">0</td>
-                                <td class="organisationnumber">30</td>
-                                <td class="organisationnumber"><b>0</b></td>
-                            </tr>
-
-                           </tbody>
-                       </table>
+                        <h1>A New Favortie League was inserted successfully!</h1>
+                        <br>
+                        <div class="col-md-2 login-center text-start">
+                            <a th:href="@{/home}">
+                            <button class="btn btn-style btn-style-3 text-left">BACK</button>
+                            </a>
+                        </div>
+                        
                     </div>
 
+
+
+
+
+
+
+
                 </div>
-                
-            </div>
-            <div class="col-md-2 login-center text-start">
-                <a th:href="@{/home}">
-                <button class="btn btn-style btn-style-3 text-left">BACK</button>
-                </a>
             </div>
         </div>
     </section>
     <!-- //banner section -->
+
+
 
     <!-- common jquery plugin -->
     <script src="assets/js/jquery-3.3.1.min.js"></script>
