--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,7 +43,7 @@ Author URL: http://w3layouts.com
                                  </td>
                                 <td th:text="${leagues.name}"></td>
                                 <td class="actions">
-                                    <a th:href="@{/insertFav(leagueID=${leagues.id})}" class="fas fa-star"></a>
+                                    <a th:href="@{/insertFav(leagueName=${leagues.name})}" class="fas fa-star"></a>
                                 </td>
                             </tr>
                        
