--- a/src/main/resources/templates/standings.html
+++ b/src/main/resources/templates/standings.html
@@ -28,9 +28,14 @@ Author URL: http://w3layouts.com
                 <div class="row align-items-center pt-sm-5 pt-4">
                     <div class="page">
                         <h1>Standings</h1>
+                        <h2>Season 2021-2022</h2>
                         <table class="layout display responsive-table">
                            <thead>
                                <tr>
+                                   
+                                    <th >Position</th>
+                                    <th >Club</th>
+                                   <!--
                                    <th >Position</th>
                                    <th >Club</th>
                                    <th >Played</th>
@@ -38,10 +43,18 @@ Author URL: http://w3layouts.com
                                    <th >Drawn</th>
                                    <th >Lost</th>
                                    <th ><b>Points</b></th>
+                                   -->
                                </tr>
                            </thead>
                            <tbody>
-                       
+
+                            <tr th:each="standings: ${standings}">
+                                <td th:text="${standingsStat.count}"></td>
+                                <td th:text="${standings.team.shortDisplayName}"></td>
+                            </tr>
+
+
+                            <!--
                                <tr>
                                    <td class="organisationnumber">1</td>
                                    <td class="organisationname"> Porto</td>
@@ -61,6 +74,7 @@ Author URL: http://w3layouts.com
                                 <td class="organisationnumber">30</td>
                                 <td class="organisationnumber"><b>0</b></td>
                             </tr>
+                            -->
 
                            </tbody>
                        </table>
