--- a/src/main/resources/templates/standings.html
+++ b/src/main/resources/templates/standings.html
@@ -35,6 +35,11 @@ Author URL: http://w3layouts.com
                                    
                                     <th >Position</th>
                                     <th >Club</th>
+                                    <th >Games</th>
+                                    <th >Wins</th>
+                                    <th >Draws</th>
+                                    <th >Losses</th>
+                                    <th ><b>Points</b></th>
                                    <!--
                                    <th >Position</th>
                                    <th >Club</th>
@@ -51,6 +56,11 @@ Author URL: http://w3layouts.com
                             <tr th:each="standings: ${standings}">
                                 <td th:text="${standingsStat.count}"></td>
                                 <td th:text="${standings.team.shortDisplayName}"></td>
+                                <td th:text="${standings.Stats[3].value}"></td>
+                                <td th:text="${standings.Stats[0].value}"></td>
+                                <td th:text="${standings.Stats[1].value}"></td>
+                                <td th:text="${standings.Stats[2].value}"></td>
+                                <td style="font-weight: bold" th:text="${standings.Stats[6].value}"></td>
                             </tr>
 
 
