--- a/src/main/resources/templates/oops.html
+++ b/src/main/resources/templates/oops.html
@@ -27,7 +27,7 @@ Author URL: http://w3layouts.com
             <div class="container py-4">
                 <div class="row align-items-center pt-sm-5 pt-4">
                     <div class="page">
-                        <h1>A New Favorite League was added successfully!</h1>
+                        <h1>This league has already been added to your Favorites</h1>
                         <br>
                         <div class="col-md-2 login-center text-start">
                             <a th:href="@{/home}">
